src/objects/EvaluacionConcepto__c.object
<CustomObject>
    <fields>
        <fullName>Calificacion__c</fullName>
        <label>Calificación</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConceptoEvaConcepto__c</fullName>
        <label>Concepto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concepto__c</fullName>
        <label>Catálogo Conceptos</label>
        <referenceTo>CatalogoConceptos__c</referenceTo>
        <relationshipLabel>Evaluaciones - Conceptos</relationshipLabel>
        <relationshipName>Evaluaciones_Conceptos</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EjemploEvaConcepto__c</fullName>
        <label>Ejemplo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Evaluacion__c</fullName>
        <label>Evaluación</label>
        <referenceTo>Evaluacion__c</referenceTo>
        <relationshipLabel>Evaluaciones - Conceptos</relationshipLabel>
        <relationshipName>Evaluaciones_Conceptos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GuardadoDeConceptos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guardado de Conceptos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WB_ErrorFatal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error Fatal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WB_Ponderacion__c</fullName>
        <label>Ponderación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PorcentajeSeccion__c</fullName>
        <label>Porcentaje sección</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SeccionEvaConcepto__c</fullName>
        <label>Sección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubseccionEvaConcepto__c</fullName>
        <label>Subsección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Evaluación - Concepto</label>
    <nameField>
        <displayFormat>EC-{000000000}</displayFormat>
        <label>Número de Evaluación - Concepto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluaciones - Conceptos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>